# fortnite-notifier

./: .gitattributes  .gitignore  readme.md  todo.txt
.github/workflows/: alert.yml  item-database.yml
backend/: .gitignore  explore.ipynb  pyproject.toml  testdata.json
backend/.github/workflows/: Item-database.yaml
backend/app/: auth.go  config.go  go.mod  go.sum  main.go  main.py  middleware.go  models.go  routes.go  secrets.py  telegrambot.py  telegramutils.go  utils.go  webhookutils.go
backend/app/admin/: admin_routes.go  admin_utils.go
backend/app/models/: api_models.go  config_models.go  db_models.go  fortnite_api_models.go
backend/app/static/: responses.json  utils.go
backend/app/user/: user_routes.go
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/support/: page.tsx
frontend/app/users/not-created/: page.tsx
frontend/app/users/not-signed-in/: page.tsx
frontend/components/: TelegramLoginButtom.tsx
frontend/utils/: call_backend.ts  jwtCheck.ts  jwtUtils.ts
