[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Phoenix Sheppard",email = "phoenixsheppard28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-telegram-bot (>=22.1,<23.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
